se agregaron los archivos para css y javascrip

--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -7,7 +7,24 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 	<ui:composition>
-		Header
+	
+		<header> 
+		  <nav>
+		   <div class="nav-wrapper">
+		     <a href="#!" class="brand-logo"> Logo </a>
+		     <ul class="right hide-on-med-and-down">
+		       <li><a href="sass.html"><i class="material-icons right">search</i>Alumno</a></li>
+		       <li><a href="badges.html"><i class="material-icons right">view_module</i>Maestros</a></li>
+		     </ul>
+		   </div>
+		 </nav>
+		  <ul class="sidenav" id="mobile-demo">
+		      <li><a href="sass.html">Sass</a></li>
+		      <li><a href="badges.html">Components</a></li>
+		      <li><a href="collapsible.html">Javascript</a></li>
+		      <li><a href="mobile.html">Mobile</a></li>
+		  </ul>
+		</header>
 	</ui:composition>
 	
 </html>
