--- a/tecolotl-web/src/main/webapp/template/template.html
+++ b/tecolotl-web/src/main/webapp/template/template.html
@@ -8,10 +8,10 @@
 
 <h:head>
 	<title>Alumno</title>
-	<ui:remove>
-		Mas Datos CSS o configuracion
-		<h:outputStylesheet/>
-	</ui:remove>
+	
+		
+<h:outputStylesheet library="css" name="tecolotl.css" />
+	
 </h:head>
 <h:body>
 	<div class="header">
