--- a/tecolotl-web/src/main/webapp/template/footer.xhtml
+++ b/tecolotl-web/src/main/webapp/template/footer.xhtml
@@ -7,7 +7,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 	
 	<ui:composition>
-		Footer
+	<h:outputScript library="js" name="materialize.js" />
 	</ui:composition>
 	
 </html>
