--- a/tecolotl-web/src/main/webapp/template/footer.xhtml
+++ b/tecolotl-web/src/main/webapp/template/footer.xhtml
@@ -7,6 +7,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 	
 	<ui:composition>
+	
 	<footer class="page-footer">
           <div class="container">
             <div class="row">
@@ -34,6 +35,12 @@
        </footer>
 	
 	<h:outputScript library="js" name="materialize.js" />
+	<script type="text/javascript">
+	document.addEventListener('DOMContentLoaded', function() {
+		  var elems = document.querySelectorAll('.sidenav');
+		  var instances = M.Sidenav.init(elems);
+		});
+    </script>
 	</ui:composition>
 	
 </html>
