--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -12,6 +12,7 @@
 		  <nav>
 		   <div class="nav-wrapper">
 		     <a href="#!" class="brand-logo"> Logo </a>
+		       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 		     <ul class="right hide-on-med-and-down">
 		       <li><a href="sass.html"><i class="material-icons right">search</i>Alumno</a></li>
 		       <li><a href="badges.html"><i class="material-icons right">view_module</i>Maestros</a></li>
@@ -19,10 +20,8 @@
 		   </div>
 		 </nav>
 		  <ul class="sidenav" id="mobile-demo">
-		      <li><a href="sass.html">Sass</a></li>
-		      <li><a href="badges.html">Components</a></li>
-		      <li><a href="collapsible.html">Javascript</a></li>
-		      <li><a href="mobile.html">Mobile</a></li>
+		      <li><a href="sass.html"><i class="material-icons right">search</i>Alumno</a></li>
+		       <li><a href="badges.html"><i class="material-icons right">view_module</i>Maestros</a></li>
 		  </ul>
 		</header>
 	</ui:composition>
