--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -13,8 +13,8 @@
 		   <div class="nav-wrapper">
 		     <a href="#!" class="brand-logo"> Logo </a>
 		     <ul class="right hide-on-med-and-down">
-		       <li><a href="sass.html"><i class="material-icons right">search</i>Alumno</a></li>
-		       <li><a href="badges.html"><i class="material-icons right">view_module</i>Maestros</a></li>
+		       <li><a href="sass.html"><i class="material-icons right">face</i>Alumno</a></li>
+		       <li><a href="badges.html"><i class="material-icons right">person</i>Maestros</a></li>
 		     </ul>
 		   </div>
 		 </nav>
