--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -20,8 +20,8 @@
 		   </div>
 		 </nav>
 		  <ul class="sidenav" id="mobile-demo">
-		      <li><a href="sass.html"><i class="material-icons right">search</i>Alumno</a></li>
-		       <li><a href="badges.html"><i class="material-icons right">view_module</i>Maestros</a></li>
+		      <li><a href="sass.html"><i class="material-icons right">face</i>Alumno</a></li>
+		       <li><a href="badges.html"><i class="material-icons right">person</i>Maestros</a></li>
 		  </ul>
 		</header>
 	</ui:composition>
