--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -12,16 +12,16 @@
 		  <nav>
 		   <div class="nav-wrapper">
 		     <a href="#!" class="brand-logo"> Logo </a>
-		       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+		       <a href="#" data-target="menu-movible" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 		     <ul class="right hide-on-med-and-down">
-		       <li><a href="sass.html"><i class="material-icons right">face</i>Alumno</a></li>
-		       <li><a href="badges.html"><i class="material-icons right">person</i>Maestros</a></li>
+		       <li><a href="#"><i class="material-icons right">face</i>Alumno</a></li>
+		       <li><a href="#"><i class="material-icons right">person</i>Maestros</a></li>
 		     </ul>
 		   </div>
 		 </nav>
-		  <ul class="sidenav" id="mobile-demo">
-		      <li><a href="sass.html"><i class="material-icons right">face</i>Alumno</a></li>
-		       <li><a href="badges.html"><i class="material-icons right">person</i>Maestros</a></li>
+		  <ul class="sidenav" id="menu-movible">
+		      <li><a href="#"><i class="material-icons right">face</i>Alumno</a></li>
+		       <li><a href="#"><i class="material-icons right">person</i>Maestros</a></li>
 		  </ul>
 		</header>
 	</ui:composition>
