agregamos el archivo de idioma para botones y se agrego logo

--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -7,11 +7,10 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 	<ui:composition>
-	
 		<header> 
 		  <nav>
 		   <div class="nav-wrapper">
-		     <a href="#!" class="brand-logo"> Logo </a>
+		     <a href="#!" class="brand-logo"><h:graphicImage library="imagen" name="esquadron.png"/></a>
 		       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 		     <ul class="right hide-on-med-and-down">
 		       <li><a href="sass.html"><i class="material-icons right">face</i>Alumno</a></li>
