--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -10,7 +10,12 @@
 		<header> 
 		  <nav>
 		   <div class="nav-wrapper">
-		     <a href="#!" class="brand-logo"><h:graphicImage library="imagen" name="esquadron.png"/></a>
+		     <a href="#!" class="brand-logo tecolote-container" style="    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: inherit;"><h:graphicImage library="imagen" name="esquadron.png" width="46"/></a>
 		       <a href="#" data-target="menu-movible" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 		     <ul class="right hide-on-med-and-down">
 		       <li><a href="#"><i class="material-icons right">face</i>Alumno</a></li>
