--- a/tecolotl-web/src/main/webapp/template/footer.xhtml
+++ b/tecolotl-web/src/main/webapp/template/footer.xhtml
@@ -6,5 +6,7 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+	<h:outputScript library="js" name="uikit.js"/>
+	<h:outputScript library="js" name="uikit-icons.js"/>
 	
 </html>
