--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -6,5 +6,6 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
+	<h:outputStylesheet library="css" name="uikit.css"/>
 	
 </html>
