Página de login

--- a/tecolotl-web/src/main/webapp/template/template.xhtml
+++ b/tecolotl-web/src/main/webapp/template/template.xhtml
@@ -11,7 +11,9 @@
 </h:head>
 <h:body>
 	<ui:include src="canvas.xhtml"/>
-	<ui:insert name="contenido"/>
+	<div class="uk-container">
+		<ui:insert name="contenido"/>
+	</div>
 	<ui:include src="footer.xhtml"/>
 </h:body>
 </html>
