se agrego tipografia

--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -7,5 +7,6 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 	<h:outputStylesheet library="css" name="uikit.css"/>
+	<h:outputStylesheet library="css" name="letra.css" />
 	
 </html>
