--- a/tecolotl-web/src/main/webapp/template/template.xhtml
+++ b/tecolotl-web/src/main/webapp/template/template.xhtml
@@ -9,7 +9,7 @@
 <h:head>
 	<ui:include src="header.xhtml"/>
 </h:head>
-<h:body>
+<h:body styleClass="lescuadron">
 	<ui:include src="canvas.xhtml"/>
 	<div class="uk-container">
 		<ui:insert name="contenido"/>
