--- a/tecolotl-web/src/main/webapp/template/canvas.xhtml
+++ b/tecolotl-web/src/main/webapp/template/canvas.xhtml
@@ -6,12 +6,12 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-<nav class="uk-navbar-container uk-navbar-" uk-navbar="">
+<nav class=" uk-navbar-container uk-navbar " uk-navbar="">
     <div class="uk-navbar-left">
         <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="#">Active</a></li>
+            <li class="uk-active" >  <a href="#">Active</a></li>
             <li>
-                <a href="#">Parent</a>
+                <a href="#" >Parent</a>
                 <div class="uk-navbar-dropdown">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <li class="uk-active"><a href="#">Active</a></li>
