se suben archivos nav y foother ademas de el dashboard

--- a/tecolotl-web/src/main/webapp/template/footer.xhtml
+++ b/tecolotl-web/src/main/webapp/template/footer.xhtml
@@ -5,8 +5,40 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	
+	  <footer class="uk-section uk-section-small uk-text-center">
+          <hr/>
+          <p class="uk-text-small uk-text-center">Copyright 2018 - <a href="https://github.com/zzseba78/Kick-Off">Created by KickOff</a> | Built with <a href="http://getuikit.com" title="Visit UIkit 3 site" target="_blank" data-uk-tooltip=""><span data-uk-icon="uikit"></span></a> </p>
+    </footer>
 
-	<h:outputScript library="js" name="uikit.js"/>
+    <!-- OFFCANVAS menu que se despliega con la hamburguesa -->
+    <div id="offcanvas-nav" data-uk-offcanvas="flip: true; overlay: true">
+      <div class=" uk-offcanvas-bar uk-offcanvas-bar-animation uk-offcanvas-slide">
+        <button class="uk-offcanvas-close uk-close uk-icon " type="button" data-uk-close=""></button>
+        <ul class="uk-nav uk-nav-default">
+          <li class="uk-active"><a href="#">Active</a></li>
+          <li class="uk-parent">
+            <a href="#">Parent</a>
+            <ul class="uk-nav-sub">
+              <li><a href="#">Sub item</a></li>
+              <li><a href="#">Sub item</a></li>
+            </ul>
+          </li>
+          <li class="uk-nav-header">Header</li>
+          <li><a href="#js-options"><span class="uk-margin-small-right uk-icon" data-uk-icon="icon: table"></span> Item</a></li>
+          <li><a href="#"><span class="uk-margin-small-right uk-icon" data-uk-icon="icon: thumbnails"></span> Item</a></li>
+          <li class="uk-nav-divider"></li>
+          <li><a href="#"><span class="uk-margin-small-right uk-icon" data-uk-icon="icon: trash"></span> Item</a></li>
+        </ul>
+        <h3>Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+    </div>
+
+	<h:outputScript library="js" name="uikit.js" />
 	<h:outputScript library="js" name="uikit-icons.js"/>
+	<h:outputScript library="js" name="Chart.js"/>
+	<h:outputScript library="js" name="chartScripts.js"/>
+	
 	
 </html>
