--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -8,5 +8,8 @@
 
 	<h:outputStylesheet library="css" name="uikit.css"/>
 	<h:outputStylesheet library="css" name="letra.css" />
+	<h:outputStylesheet library="css" name="dashboard.css" />
+	<h:outputStylesheet library="css" name="mis-estilos.css"/>
+	
 	
 </html>
