--- a/tecolotl-web/src/main/webapp/template/template.xhtml
+++ b/tecolotl-web/src/main/webapp/template/template.xhtml
@@ -9,10 +9,10 @@
 <h:head>
 	<ui:include src="header.xhtml"/>
 </h:head>
-<h:body styleClass="lescuadron">
-	<ui:include src="canvas.xhtml"/>
-	<div class="uk-container">
-		<ui:insert name="contenido"/>
+<h:body styleClass="lescuadron uk-offcanvas-content">
+	<ui:include src="navbar.xhtml"/>
+	<div class="">
+		<ui:insert name="contenido2"/>
 	</div>
 	<ui:include src="footer.xhtml"/>
 </h:body>
