--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -5,11 +5,14 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 
 	<h:outputStylesheet library="css" name="uikit.css"/>
 	<h:outputStylesheet library="css" name="letra.css" />
 	<h:outputStylesheet library="css" name="dashboard.css" />
 	<h:outputStylesheet library="css" name="mis-estilos.css"/>
+	<h:outputStylesheet library="css" name="estilo-navbar.css"/>
 	
 	
 </html>
