--- a/tecolotl-web/src/main/webapp/template/navbar.xhtml
+++ b/tecolotl-web/src/main/webapp/template/navbar.xhtml
@@ -6,36 +6,27 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-  <header id="top-head" class="uk-position-fixed">
+<header id="top-head" class="uk-position-fixed">
       <div class="uk-container uk-container-expand uk-background-primary">
         <!-- navbar de la pagina -->
         <nav class="uk-navbar uk-light" data-uk-navbar="mode:click; duration: 250">
+
+
           <div class="uk-navbar-left">
-            <div class="uk-navbar-item uk-hidden@m">
-              <a class="uk-logo" href="#"><img class="custom-logo" src="resources/img/Logo_escuadron.png" alt=""/></a>
+            <div class="uk-navbar-item uk-hidden@m ">
+              <a class="uk-logo" href="#"><img class="custom-logo" src="resources/img/esquadron.svg" alt=""/></a>
             </div>
-            <ul class="uk-navbar-nav uk-visible@m">
-              <li><a href="#">Accounts</a></li>
-              <li>
-                <a href="#">Settings <span data-uk-icon="icon: triangle-down"></span></a>
-                <div class="uk-navbar-dropdown">
-                  <ul class="uk-nav uk-navbar-dropdown-nav">
-                    <li class="uk-nav-header">YOUR ACCOUNT</li>
-                    <li><a href="#"><span data-uk-icon="icon: info"></span> Summary</a></li>
-                    <li><a href="#"><span data-uk-icon="icon: refresh"></span> Edit</a></li>
-                    <li><a href="#"><span data-uk-icon="icon: settings"></span> Configuration</a></li>
-                    <li class="uk-nav-divider"></li>
-                    <li><a href="#"><span data-uk-icon="icon: image"></span> Your Data</a></li>
-                    <li class="uk-nav-divider"></li>
-                    <li><a href="#"><span data-uk-icon="icon: sign-out"></span> Logout</a></li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-            <div class="uk-navbar-item uk-visible@s">
+          </div>
+
+          <div class="uk-navbar-center">
+
+
+
+            <!-- ******************input de busqueda******************** -->
+             <div class="uk-navbar-item  uk-visible@s ">
               <form action="dashboard.html" class="uk-search uk-search-default">
-                 <span data-uk-search-icon=""></span>
-                <input class="uk-search-input search-field" type="search" placeholder="Search"/>
+                <span data-uk-search-icon=""></span>
+                <input class="uk-search-input search-field " type="search" placeholder="Search"/>
               </form>
             </div>
           </div>
@@ -51,14 +42,14 @@
         <!-- fin navbar -->
       </div>
     </header>
-    
-      <aside id="left-col" class="uk-light uk-visible@m">
+<!-- menu del lado izquierdo -->
+    <aside id="left-col" class="uk-light uk-visible@m">
       <div class="left-logo uk-flex uk-flex-middle">
-        <img class="custom-logo" src="resources/img/Logo_escuadron.png" alt="" style="width: 180px; height:auto; "/>
+        <img class="custom-logo" src="resources/img/esquadron.svg" alt=""/>
       </div>
       <div class="left-content-box  content-box-dark">
         <img src="resources/img/avatar.svg" alt="" class="uk-border-circle profile-img"/>
-        <h4 class="uk-text-center uk-margin-remove-vertical text-light">John Doe</h4>
+        <h4 class="uk-text-center uk-margin-remove-vertical text-light">Noldi Vives</h4>
 
         <div class="uk-position-relative uk-text-center uk-display-block">
             <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">Admin</a>
@@ -80,20 +71,11 @@
 
       <div class="left-nav-wrap">
         <ul class="uk-nav uk-nav-default uk-nav-parent-icon" data-uk-nav="">
-          <li class="uk-nav-header">ACTIONS</li>
-          <li><a href="#"><span data-uk-icon="icon: comments" class="uk-margin-small-right"></span>Messages</a></li>
-          <li><a href="#"><span data-uk-icon="icon: users" class="uk-margin-small-right"></span>Friends</a></li>
-          <li class="uk-parent"><a href="#"><span data-uk-icon="icon: thumbnails" class="uk-margin-small-right"></span>Rooms</a>
-            <ul class="uk-nav-sub">
-              <li><a href="#">Ipsum Dolor</a></li>
-              <li><a href="#">Officia deserunt</a></li>
-              <li><a href="#">Duis aute irure</a></li>
-              <li><a href="#">Ut enim ad minim</a></li>
-            </ul>
-          </li>
-          <li><a href="#"><span data-uk-icon="icon: album" class="uk-margin-small-right"></span>Albums</a></li>
-          <li><a href="#"><span data-uk-icon="icon: thumbnails" class="uk-margin-small-right"></span>Featured Content</a></li>
-          <li><a href="#"><span data-uk-icon="icon: lifesaver" class="uk-margin-small-right"></span>Tips</a></li>
+          <li class="uk-nav-header">dashboard</li>
+
+          <!-- <li><a href="#"><span data-uk-icon="icon: album" class="uk-margin-small-right"></span></a></li> -->
+          <li><a href="#"><span data-uk-icon="icon: thumbnails" class="uk-margin-small-right"></span>Lista de Escuelas</a></li>
+          <!-- <li><a href="#"><span data-uk-icon="icon: lifesaver" class="uk-margin-small-right"></span>Tips</a></li> -->
           <li class="uk-parent">
             <a href="#"><span data-uk-icon="icon: comments" class="uk-margin-small-right"></span>Reports</a>
             <ul class="uk-nav-sub">
@@ -106,17 +88,17 @@
 
             <h5>Daily Reports</h5>
             <div>
-              <span class="uk-text-small">Traffic <small>(+50)</small></span>
+              <span class="uk-text-small">Escuelas Proximas a caducar <small>(+50)</small></span>
               <progress class="uk-progress" value="50" max="100"></progress>
             </div>
             <div>
-              <span class="uk-text-small">Income <small>(+78)</small></span>
+              <span class="uk-text-small">Total de licencias vendidas <small>(+78)</small></span>
               <progress class="uk-progress success" value="78" max="100"></progress>
             </div>
-            <div>
+            <!-- <div>
               <span class="uk-text-small">Feedback <small>(-12)</small></span>
               <progress class="uk-progress warning" value="12" max="100"></progress>
-            </div>
+            </div> -->
 
         </div>
 
