--- a/tecolotl-web/src/main/webapp/template/template.xhtml
+++ b/tecolotl-web/src/main/webapp/template/template.xhtml
@@ -11,7 +11,7 @@
 </h:head>
 <h:body styleClass="lescuadron uk-offcanvas-content">
 	<ui:include src="navbar.xhtml"/>
-	<div class="">
+	<div class="uk-container">
 		<ui:insert name="contenido2"/>
 	</div>
 	<ui:include src="footer.xhtml"/>
