se modifico tablas y logo

--- a/tecolotl-web/src/main/webapp/resources/css/estilo-navbar.css
+++ b/tecolotl-web/src/main/webapp/resources/css/estilo-navbar.css
@@ -1,10 +1,13 @@
 .uk-logo > img {
-width: 150px;
+width: 40px;
 height: auto;
 
 }
 
 .left-logo > img{
-  width: 150px;
+  width: 40px;
   height: auto;
 }
+ .left-logo > span{
+  font-size:28px;
+ }
