--- a/tecolotl-web/src/main/webapp/template/navbar.xhtml
+++ b/tecolotl-web/src/main/webapp/template/navbar.xhtml
@@ -49,8 +49,7 @@
        <span>scuadron</span>
       </div>
       <div class="left-content-box  content-box-dark">
-        <img src="resources/img/avatar.svg" alt="" class="uk-border-circle profile-img"/>
-        <h4 class="uk-text-center uk-margin-remove-vertical text-light">Noldi Vives</h4>
+        <h4 class="uk-text-center uk-margin-remove-vertical text-light"><h:outputText value="#{usuarioControlador.nombre}"/> </h4>
 
         <div class="uk-position-relative uk-text-center uk-display-block">
             <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">Admin</a>
@@ -75,10 +74,10 @@
           <li class="uk-nav-header">dashboard</li>
 
           <!-- <li><a href="#"><span data-uk-icon="icon: album" class="uk-margin-small-right"></span></a></li> -->
-          <li><a href="#"><span data-uk-icon="icon: thumbnails" class="uk-margin-small-right"></span>Lista de Escuelas</a></li>
+          <li><a href="#"><span data-uk-icon="icon: list" class="uk-margin-small-right"></span>Escuelas</a></li>
           <!-- <li><a href="#"><span data-uk-icon="icon: lifesaver" class="uk-margin-small-right"></span>Tips</a></li> -->
           <li class="uk-parent">
-            <a href="#"><span data-uk-icon="icon: comments" class="uk-margin-small-right"></span>Reports</a>
+            <a href="#"><span data-uk-icon="icon: comments" class="uk-margin-small-right"></span>Reportes</a>
             <ul class="uk-nav-sub">
               <li><a href="#">Sub item</a></li>
               <li><a href="#">Sub item</a></li>
