se suben modificacion navbar

--- a/tecolotl-web/src/main/webapp/resources/css/estilo-navbar.css
+++ b/tecolotl-web/src/main/webapp/resources/css/estilo-navbar.css
@@ -1,13 +1,15 @@
 .uk-logo > img {
-width: 40px;
+width: 50px;
 height: auto;
 
 }
 
 .left-logo > img{
-  width: 40px;
+  width: 50px;
   height: auto;
 }
- .left-logo > span{
-  font-size:28px;
- }
+
+.margen10{
+  margin-right: 3px;
+}
+
