--- a/tecolotl-web/src/main/webapp/template/navbar.xhtml
+++ b/tecolotl-web/src/main/webapp/template/navbar.xhtml
@@ -45,8 +45,8 @@
 <!-- menu del lado izquierdo -->
     <aside id="left-col" class="uk-light uk-visible@m lescuadron">
       <div class="left-logo uk-flex uk-flex-middle">
-       <h:graphicImage library="img" name="white_escuadron.svg" styleClass="uk-margin-small-right"></h:graphicImage>
-       <span>scuadron</span>
+       <h:graphicImage library="img" name="white_escuadron.svg" styleClass="uk-margin-small-right margen10"></h:graphicImage>
+       <span class="lescuadron letra-logo ">scuadron</span>
       </div>
       <div class="left-content-box  content-box-dark">
         <h4 class="uk-text-center uk-margin-remove-vertical text-light"><h:outputText value="#{usuarioControlador.nombre}"/> </h4>
