--- a/tecolotl-web/src/main/webapp/template/navbar.xhtml
+++ b/tecolotl-web/src/main/webapp/template/navbar.xhtml
@@ -48,7 +48,8 @@
        <h:graphicImage library="img" name="white_escuadron.svg" styleClass="uk-margin-small-right margen10"></h:graphicImage>
        <span class="lescuadron letra-logo ">scuadron</span>
       </div>
-      <div class="left-content-box  content-box-dark">
+      <div class="left-content-box  content-box-dark logo-admin ">
+      	<h:graphicImage library="img" name="superadmin.svg" styleClass="uk-border-circle profile-img" />
         <h4 class="uk-text-center uk-margin-remove-vertical text-light"><h:outputText value="#{usuarioControlador.nombre}"/> </h4>
 
         <div class="uk-position-relative uk-text-center uk-display-block">
