--- a/tecolotl-web/src/main/webapp/resources/css/estilo-navbar.css
+++ b/tecolotl-web/src/main/webapp/resources/css/estilo-navbar.css
@@ -18,7 +18,10 @@ height: auto;
 	height: auto;
 }
 
-.uk-background-primary{
+.uk-background-primary {
 	color: white !important;
-	font-weight: bold;
+	font-weight: bold !important;
+	font-size: 15px !important;
 } 
+
+ 
