--- a/tecolotl-web/src/main/webapp/template/template.xhtml
+++ b/tecolotl-web/src/main/webapp/template/template.xhtml
@@ -9,7 +9,7 @@
 <h:head>
 	<ui:include src="header.xhtml"/>
 </h:head>
-<h:body styleClass="lescuadron" >
+<h:body styleClass="" >
 	<div class="uk-offcanvas-content">
 		<ui:include src="navbar.xhtml"/>
 		
