ordenamiento tabla nombre y background de login

--- a/tecolotl-web/src/main/webapp/resources/css/estilo-navbar.css
+++ b/tecolotl-web/src/main/webapp/resources/css/estilo-navbar.css
@@ -28,3 +28,13 @@ height: auto;
   cursor: pointer;
  
  }
+ 
+ .links {
+ text-decoration: none;
+ color:white;
+ }
+ 
+ a.links > span:hover{
+ color:black;
+ }
+ 
