--- a/tecolotl-web/src/main/webapp/resources/css/estilo-navbar.css
+++ b/tecolotl-web/src/main/webapp/resources/css/estilo-navbar.css
@@ -30,11 +30,20 @@ height: auto;
  }
  
  .links {
- text-decoration: none;
  color:white;
+ }
+ a.links > span{
+ text-decoration:none;
  }
  
  a.links > span:hover{
+ text-decoration:none;
  color:black;
  }
+ 
+ .espacio{
+ padding-top: 5px;
+ padding-bottom: 5px;
+ }
+ 
  
