--- a/tecolotl-web/src/main/webapp/template/header.xhtml
+++ b/tecolotl-web/src/main/webapp/template/header.xhtml
@@ -11,6 +11,7 @@
 	<h:outputStylesheet library="css" name="letra.css" />
 	<h:outputStylesheet library="css" name="dashboard.css" />
     <h:outputStylesheet library="css" name="estilo-navbar.css"/>
+    <h:outputStylesheet library="css" name="tablas.css" />
 	
 	
 </html>
