funcion ver password pagina error

--- a/tecolotl-web/src/main/webapp/resources/css/login.css
+++ b/tecolotl-web/src/main/webapp/resources/css/login.css
@@ -42,3 +42,15 @@ body{
 
  
 }
+
+.icono2{
+ position: absolute;
+  top: 12px;
+  bottom: 0;
+  left: 250px;
+  /* 2 */
+  width: 26px;
+  /* 3 */
+
+ 
+}
