--- a/tecolotl-web/src/main/webapp/template/navbar.xhtml
+++ b/tecolotl-web/src/main/webapp/template/navbar.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 
 <header id="top-head" class="uk-position-fixed " >
       <div class="uk-container uk-container-expand uk-background-primary">
@@ -31,12 +31,14 @@
             </div>
           </div>
           <div class="uk-navbar-right">
+            <h:form id="formulario-menu-principal">
             <ul class="uk-navbar-nav">
               <li><a href="#" data-uk-icon="icon:user" title="Your profile" data-uk-tooltip=""></a></li>
               <li><a href="#" data-uk-icon="icon: settings" title="Settings" data-uk-tooltip=""></a></li>
-              <li><a href="#" data-uk-icon="icon:  sign-out" title="Sign Out" data-uk-tooltip=""></a></li>
+              <li><h:commandLink actionListener="#{usuarioControlador.cerrarSesion()}" pt:data-uk-icon="icon:  sign-out" pt:title="Sign Out" pt:data-uk-tooltip=""/></li>
               <li><a class="uk-navbar-toggle uk-hidden@m" data-uk-toggle="" data-uk-navbar-toggle-icon="" href="#offcanvas-nav" title="Offcanvas" data-uk-tooltip=""></a></li>
             </ul>
+            </h:form>
           </div>
         </nav>
         <!-- fin navbar -->
@@ -102,25 +104,25 @@
             </div> -->
 
         </div>
-
       </div>
-      <div class="bar-bottom">
-        <ul class="uk-subnav uk-flex uk-flex-center uk-child-width-1-5" data-uk-grid="">
-          <li>
-            <a href="#" class="uk-icon-link" data-uk-icon="icon: home" title="Home" data-uk-tooltip=""></a>
-          </li>
-          <li>
-            <a href="#" class="uk-icon-link" data-uk-icon="icon: settings" title="Settings" data-uk-tooltip=""></a>
-          </li>
-          <li>
-            <a href="#" class="uk-icon-link" data-uk-icon="icon: social"  title="Social" data-uk-tooltip=""></a>
-          </li>
-
-          <li>
-            <a href="#" class="uk-icon-link" data-uk-tooltip="Sign out" data-uk-icon="icon: sign-out"></a>
-          </li>
-        </ul>
-      </div>
+      <h:form id="formulario-submenu">
+        <div class="bar-bottom">
+          <ul class="uk-subnav uk-flex uk-flex-center uk-child-width-1-5" data-uk-grid="">
+            <li>
+              <a href="#" class="uk-icon-link" data-uk-icon="icon: home" title="Home" data-uk-tooltip=""></a>
+            </li>
+            <li>
+              <a href="#" class="uk-icon-link" data-uk-icon="icon: settings" title="Settings" data-uk-tooltip=""></a>
+            </li>
+            <li>
+              <a href="#" class="uk-icon-link" data-uk-icon="icon: social"  title="Social" data-uk-tooltip=""></a>
+            </li>
+            <li>
+              <h:commandLink styleClass="uk-icon-link" pt:data-uk-tooltip="Salir" pt:data-uk-icon="icon: sign-out" action="#{usuarioControlador.cerrarSesion()}"/>
+            </li>
+          </ul>
+        </div>
+      </h:form>
     </aside>
 
 </html>
