se agrego imagen de vacio y tipo de bloquo en pagina detalle

--- a/tecolotl-web/src/main/webapp/resources/css/letra.css
+++ b/tecolotl-web/src/main/webapp/resources/css/letra.css
@@ -3,10 +3,19 @@
   src: url("../resources/css/byt.ttf");
 }
 
+@font-face {
+    font-family:gochih;
+    src: url("../resources/css/GochiHand-Regular.ttf");
+}
+
 .lescuadron{
 	font-family:escuadron;
 }
 
+.gochi{
+    font-family:gochih;
+
+}
 .letra-logo{
 font-size: 27px;
 position: relative;
