Se mejoro tabla de detalles escuela contactos

--- a/tecolotl-web/src/main/webapp/resources/css/tablas.css
+++ b/tecolotl-web/src/main/webapp/resources/css/tablas.css
@@ -19,4 +19,9 @@ a.links > span:hover{
    color: white !important;
    font-weight: bold !important;
    font-size: 15px !important;
-} 
+}
+
+.b-tabla{
+
+    border-radius: 15px;
+}
