--- a/tecolotl-web/src/main/webapp/template/navbar.xhtml
+++ b/tecolotl-web/src/main/webapp/template/navbar.xhtml
@@ -80,13 +80,11 @@
             </h:link>
           </li>
           <!-- <li><a href="#"><span data-uk-icon="icon: lifesaver" class="uk-margin-small-right"></span>Tips</a></li> -->
-          <li class="uk-parent">
-            <a href="#"><span data-uk-icon="icon: database" class="uk-margin-small-right"></span><h:outputText value="#{mensaje['catalog.label']}"/></a>
-            <ul class="uk-nav-sub">
-              <li><h:link value="#{mensaje['catalog.blockingreason']}" styleClass="uk-text-capitalize" outcome="/administracion/catalogo.xhtml"/></li>
-              <li><h:link styleClass="uk-text-capitalize" value="#{mensaje['catalog.colony']}"/></li>
-              <li><h:link styleClass="uk-text-capitalize" value="#{mensaje['catalog.contact']}"/></li>
-            </ul>
+          <li>
+            <h:link outcome="/administracion/catalogo.xhtml">
+              <span data-uk-icon="icon: database" class="uk-margin-small-right"></span>
+              <h:outputText value="#{mensaje['catalog.label']}"/>
+            </h:link>
           </li>
         </ul>
       </div>
