Listado de escuelas, navegacion con la pageniación completo

--- a/tecolotl-web/src/main/webapp/resources/css/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/dashboard.css
@@ -98,9 +98,9 @@
 }
 .left-logo {
 	/* navbar height */
-	height: 52px;
+	height: 60px;
 	line-height: 52px;
-	padding: 0 20px;
+	padding: 0px 20px;
 }
 .custom-logo {
 	height: 32px;
@@ -195,4 +195,8 @@
 	position: relative;
 	height: 300px;
 	margin: 0 auto;
+}
+
+.primera-mayuscula::first-letter {
+	text-transform: uppercase;
 }
