--- a/tecolotl-web/src/main/webapp/resources/css/letra.css
+++ b/tecolotl-web/src/main/webapp/resources/css/letra.css
@@ -1,21 +1,12 @@
 @font-face {
   font-family:escuadron;
-  src: url("../resources/css/byt.ttf");
-}
-
-@font-face {
-    font-family:gochih;
-    src: url("../resources/css/GochiHand-Regular.ttf");
+  src: url('#{resource["css/byt.ttf"]}');
 }
 
 .lescuadron{
 	font-family:escuadron;
 }
 
-.gochi{
-    font-family:gochih;
-
-}
 .letra-logo{
 font-size: 27px;
 position: relative;
