--- a/tecolotl-web/src/main/webapp/resources/css/tablas.css
+++ b/tecolotl-web/src/main/webapp/resources/css/tablas.css
@@ -15,18 +15,18 @@ a.links > span:hover{
  color:black;
 }
 
-.uk-background-primary {
+.uk-background-primary .titulo-blanco {
    color: white !important;
    font-weight: bold !important;
    font-size: 15px !important;
 }
 
 .boton-paginacion-anterior:enabled {
-    background-image: url("#{resource['img/boton/anterior-habilitado.svg']}");
+    background-image: url('#{resource["img/boton/anterior-habilitado.svg"]}');
 }
 
 .boton-paginacion-anterior:disabled {
-    background-image: url("#{resource['img/boton/anterior-deshabilitado.svg']}");
+    background-image: url('#{resource["img/boton/anterior-deshabilitado.svg"]}');
 }
 
 .boton-paginacion {
@@ -35,26 +35,26 @@ a.links > span:hover{
 }
 
 .boton-paginacion-siguiente:enabled {
-    background-image: url("#{resource['img/boton/siguiente-habilitado.svg']}");
+    background-image: url('#{resource["img/boton/siguiente-habilitado.svg"]}');
 }
 
 .boton-paginacion-siguiente:disabled {
-    background-image: url("#{resource['img/boton/siguiente-deshabilitado.svg']}");
+    background-image: url('#{resource["img/boton/siguiente-deshabilitado.svg"]}');
 }
 
 
 .boton-paginacion-primera:enabled {
-    background-image: url("#{resource['img/boton/primero-habilitado.svg']}");
+    background-image: url('#{resource["img/boton/primero-habilitado.svg"]}');
 }
 
 .boton-paginacion-primera:disabled {
-    background-image: url("#{resource['img/boton/primero-deshabilitado.svg']}");
+    background-image: url('#{resource["img/boton/primero-deshabilitado.svg"]}');
 }
 
 .boton-paginacion-ultima:enabled {
-    background-image: url("#{resource['img/boton/ultimo-habilitado.svg']}");
+    background-image: url('#{resource["img/boton/ultimo-habilitado.svg"]}');
 }
 
 .boton-paginacion-ultima:disabled {
-    background-image: url("#{resource['img/boton/ultimo-deshabilitado.svg']}");
+    background-image: url('#{resource["img/boton/ultimo-deshabilitado.svg"]}');
 }
