--- a/tecolotl-web/src/main/webapp/template/template.xhtml
+++ b/tecolotl-web/src/main/webapp/template/template.xhtml
@@ -9,13 +9,14 @@
 <h:head>
 	<ui:include src="header.xhtml"/>
 </h:head>
-<h:body styleClass="" >
-	<div class="uk-offcanvas-content">
-		<ui:include src="navbar.xhtml"/>
-		
-			<ui:insert name="contenido2"/>
-		
+	<ui:include src="navbar.xhtml"/>
+	<div id="content" data-uk-height-viewport="expand: true">
+		<div class="uk-container">
+			<div class="uk-container-expand">
+				<ui:insert name="contenido2"/>
+			</div>
+		</div>
 	</div>
 	<ui:include src="footer.xhtml"/>
-</h:body>
+
 </html>
