--- a/tecolotl-web/src/main/webapp/resources/css/letra.css
+++ b/tecolotl-web/src/main/webapp/resources/css/letra.css
@@ -12,3 +12,11 @@ font-size: 27px;
 position: relative;
 top: 10px;
 }
+
+.letra-titulo{
+    color:white;
+}
+
+.fondo-peligro{
+    background-color: #f0506e;
+}
