--- a/tecolotl-web/src/main/webapp/template/template.xhtml
+++ b/tecolotl-web/src/main/webapp/template/template.xhtml
@@ -9,14 +9,15 @@
 <h:head>
 	<ui:include src="header.xhtml"/>
 </h:head>
+<h:body>
 	<ui:include src="navbar.xhtml"/>
 	<div id="content" data-uk-height-viewport="expand: true">
 		<div class="uk-container">
-			<div class="uk-container-expand">
+			<div class="uk-container-large">
 				<ui:insert name="contenido2"/>
 			</div>
 		</div>
 	</div>
 	<ui:include src="footer.xhtml"/>
-
+</h:body>
 </html>
