--- a/tecolotl-web/src/main/webapp/template/template.xhtml
+++ b/tecolotl-web/src/main/webapp/template/template.xhtml
@@ -13,6 +13,7 @@
 	<ui:include src="navbar.xhtml"/>
 	<div id="content" data-uk-height-viewport="expand: true">
 		<div class="uk-container">
+			<ui:insert name="contenido"/>
 			<div class="uk-container-large">
 				<ui:insert name="contenido2"/>
 			</div>
