--- a/tecolotl-web/src/main/webapp/template/administracion/nav2.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/nav2.xhtml
@@ -9,29 +9,29 @@
 
 
 <div class="left-logo uk-flex uk-flex-middle">
-    <img class="uk-margin-small-right" src="../resources/img/esquadronBlc.svg" width="40" height="40" alt=""/>
+    <h:graphicImage styleClass="uk-margin-small-right" library="img" name="esquadron-no-stroke.svg" width="40" height="40" alt="escuadrom"/>
     <span class="titulo-blanco uk-text-capitalize">Dashboard</span>
 </div>
 <div class="left-content-box  content-box-dark">
-    <h:graphicImage library="img" name="maestra.svg" styleClass="uk-svg uk-border-circle profile-img"/>
+    <h:graphicImage library="img" name="avatar/administrador.svg" styleClass="uk-svg uk-border-circle profile-img"/>
     <h4 class="uk-text-center uk-margin-remove-vertical text-light">John Doe</h4>
     <div class="uk-position-relative uk-text-center uk-display-block">
         <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">Admin</a>
         <!-- user dropdown -->
         <h:panelGroup  layout="block" styleClass="uk-dropdown user-drop" pt:data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
             <ul class="uk-nav uk-dropdown-nav uk-text-left">
-                <li><a href="#"><span data-uk-icon="icon: info"></span> Summary</a></li>
+                <li><a href="#"><span data-uk-icon="icon: info"/> Summary</a></li>
                     <li>
                          <h:outputLink>
                              <h:outputText pt:uk-icon="icon: info"/> Hola
                          </h:outputLink>
                     </li>
-                <li><a href="#"><span data-uk-icon="icon: refresh"></span> Edit</a></li>
-                <li><a href="#"><span data-uk-icon="icon: settings"></span> Configuration</a></li>
+                <li><a href="#"><span data-uk-icon="icon: refresh"/> Edit</a></li>
+                <li><a href="#"><span data-uk-icon="icon: settings"/> Configuration</a></li>
                 <li class="uk-nav-divider"></li>
-                <li><a href="#"><span data-uk-icon="icon: image"></span> Your Data</a></li>
+                <li><a href="#"><span data-uk-icon="icon: image"/> Your Data</a></li>
                 <li class="uk-nav-divider"></li>
-                <li><a href="#"><span data-uk-icon="icon: sign-out"></span> Sign Out</a></li>
+                <li><a href="#"><span data-uk-icon="icon: sign-out"/> Sign Out</a></li>
             </ul>
         </h:panelGroup>
         <!-- /user dropdown -->
