Se realizan los controller para dashboard administracion

--- a/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
@@ -6,18 +6,18 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <div class="left-content-box uk-margin-top">
-        <h5>Daily Reports</h5>
+        <h5>Estatus</h5>
         <div>
-            <span class="uk-text-small">Traffic <small>(+50)</small></span>
-            <progress class="uk-progress" value="50" max="100"></progress>
+            <span class="uk-text-small">Escuelas <small>(50)</small></span>
+            <progress class="uk-progress" value="50" max="100"/>
         </div>
         <div>
-            <span class="uk-text-small">Income <small>(+78)</small></span>
-            <progress class="uk-progress success" value="78" max="100"></progress>
+            <span class="uk-text-small">Licencias <small>(78)</small></span>
+            <progress class="uk-progress success" value="78" max="100"/>
         </div>
         <div>
-            <span class="uk-text-small">Feedback <small>(-12)</small></span>
-            <progress class="uk-progress warning" value="12" max="100"></progress>
+            <span class="uk-text-small">Escuelas por caducar <small>(12)</small></span>
+            <progress class="uk-progress warning" value="12" max="100"/>
         </div>
     </div>
 </html>
