--- a/tecolotl-web/src/main/webapp/template/administracion/nav1.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/nav1.xhtml
@@ -12,10 +12,12 @@
                 <div class="uk-navbar-left">
                     <div class="uk-navbar-item uk-hidden@m">
                         <img class="uk-margin-small-right" src="../resources/img/esquadron4.svg" width="40" height="40" alt=""/>
-                        <span class="titulo-blanco uk-text-capitalize">Dashboard</span>
+                        <span class="titulo-blanco uk-text-capitalize">squadron</span>
                     </div>
+
                     <ul class="uk-navbar-nav uk-visible@m">
                         <li><a href="#">Accounts</a></li>
+                        <!--
                         <li>
                             <a href="#">Settings <span data-uk-icon="icon: triangle-down"></span></a>
                             <div class="uk-navbar-dropdown">
@@ -31,9 +33,10 @@
                                 </ul>
                             </div>
                         </li>
+                        -->
                     </ul>
-
                 </div>
+                <!--
                 <div class="uk-navbar-right">
                     <ul class="uk-navbar-nav">
                         <li><a href="#" data-uk-icon="icon:user" title="Your profile" data-uk-tooltip=""></a></li>
@@ -42,6 +45,7 @@
                         <li class="uk-hidden@m  "><a class="uk-navbar-toggle " data-uk-toggle="" data-uk-navbar-toggle-icon="" href="#offcanvas-nav" title="Offcanvas" data-uk-tooltip=""></a></li>
                     </ul>
                 </div>
+                -->
             </nav>
         </div>
     </header>
