--- a/tecolotl-web/src/main/webapp/template/administracion/nav2.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/nav2.xhtml
@@ -10,17 +10,18 @@
 
 <div class="left-logo uk-flex uk-flex-middle">
     <h:graphicImage id="avatar" styleClass="uk-margin-small-right uk-preserve" library="img" name="esquadron.svg" width="40" height="40" alt="escuadrom" pt:uk-svg=""/>
-    <span class="titulo-blanco uk-text-capitalize">Dashboard</span>
+    <span class="titulo-blanco uk-text-capitalize">squadron</span>
 </div>
 <div class="left-content-box  content-box-dark">
     <h:graphicImage library="img" name="avatar/administrador.svg" styleClass="uk-svg uk-border-circle profile-img"/>
-    <h4 class="uk-text-center uk-margin-remove-vertical text-light">John Doe</h4>
+    <h4 class="uk-text-center uk-margin-remove-vertical text-light">Noldi Vives</h4>
     <div class="uk-position-relative uk-text-center uk-display-block">
-        <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">Admin</a>
+        <!--<a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">Administrador</a> -->
+        <h:outputLink styleClass="uk-text-small uk-text-muted uk-display-block uk-text-center" pt:data-uk-icon="icon: triangle-down; ratio: 1" value="#">Administrador</h:outputLink>
         <!-- user dropdown -->
         <h:panelGroup  layout="block" styleClass="uk-dropdown user-drop" pt:data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
             <ul class="uk-nav uk-dropdown-nav uk-text-left">
-                <li><a href="#"><h:outputText pt:data-uk-icon="icon: info"/> Summary</a></li>
+                <!--<li><a href="#"><h:outputText pt:data-uk-icon="icon: info"/> Summary</a></li>
                 <li>
                      <h:outputLink>
                          <h:outputText pt:uk-icon="icon: info"/> Hola
@@ -30,8 +31,8 @@
                 <li><a href="#"><span data-uk-icon="icon: settings"/> Configuration</a></li>
                 <li class="uk-nav-divider"></li>
                 <li><a href="#"><span data-uk-icon="icon: image"/> Your Data</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#"><span data-uk-icon="icon: sign-out"/> Sign Out</a></li>
+                <li class="uk-nav-divider"></li>-->
+                <li><a href="#"><h:outputText pt:data-uk-icon="icon: sign-out"/> Salir</a></li>
             </ul>
         </h:panelGroup>
         <!-- /user dropdown -->
