llamada ajax para codido postal

--- a/tecolotl-web/src/main/webapp/template/administracion/nav1.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/nav1.xhtml
@@ -11,7 +11,7 @@
             <nav class="uk-navbar uk-light" data-uk-navbar="mode:click; duration: 250">
                 <div class="uk-navbar-left">
                     <div class="uk-navbar-item uk-hidden@m">
-                        <img class="uk-margin-small-right" src="../resources/img/esquadron4.svg" width="40" height="40" alt=""/>
+                        <h:graphicImage library="img" name="esquadron.svg"/>
                         <span class="titulo-blanco uk-text-capitalize">squadron</span>
                     </div>
 
