--- a/tecolotl-web/src/main/webapp/resources/css/pikaday.css
+++ b/tecolotl-web/src/main/webapp/resources/css/pikaday.css
@@ -11,9 +11,10 @@
     position: relative;
     color: #333;
     background: #fff;
-    border: 1px solid #ccc;
+    /*border: 2px solid black;*/
     border-bottom-color: #bbb;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 /*
@@ -45,6 +46,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 .pika-title {
     position: relative;
     text-align: center;
+    background-color:#0F7AE5;
 }
 
 .pika-label {
@@ -57,7 +59,8 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     font-size: 14px;
     line-height: 20px;
     font-weight: bold;
-    background-color: #fff;
+    color:white;
+    /*background-color: #fff;*/
 }
 .pika-title select {
     cursor: pointer;
@@ -121,21 +124,27 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
-    border: 0;
+    /*border: 2px solid black;*/
+    border-top: none;
 }
 
 .pika-table th,
 .pika-table td {
     width: 14.285714285714286%;
     padding: 0;
+    border-bottom: 1px solid black;
+}
+.pika-table td{
+    border: 1px solid black;
 }
 
 .pika-table th {
-    color: #999;
+    color: black;
     font-size: 12px;
     line-height: 25px;
     font-weight: bold;
     text-align: center;
+
 }
 
 .pika-button {
@@ -148,11 +157,13 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     margin: 0;
     width: 100%;
     padding: 5px;
-    color: #666;
+    /*color: #666;*/
+    color: black;
     font-size: 12px;
     line-height: 15px;
     text-align: right;
-    background: #f5f5f5;
+    /*background: #f5f5f5;*/
+    background-color: rgb(255,255,255);
 }
 
 .pika-week {
@@ -169,9 +180,9 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 .has-event .pika-button {
     color: #fff;
     font-weight: bold;
-    background: #33aaff;
+    background: #0F7AE5;
     box-shadow: inset 0 1px 3px #178fe5;
-    border-radius: 3px;
+    /*border-radius: 3px;*/
 }
 
 .has-event .pika-button {
@@ -218,13 +229,16 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 .pika-button:hover,
 .pika-row.pick-whole-week:hover .pika-button {
     color: #fff;
-    background: #ff8000;
+    /*background: #ff8000;*/
+    /*background-color:#0F7AE5;*/
+    background-color: black;
     box-shadow: none;
-    border-radius: 3px;
+    /*border-radius: 3px;*/
 }
 
 /* styling for abbr */
 .pika-table abbr {
     border-bottom: none;
     cursor: help;
+    text-decoration: none;
 }
