--- a/tecolotl-web/src/main/webapp/resources/css/administracion/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/administracion/dashboard.css
@@ -18,14 +18,19 @@ svg .icono {
     font-size: 14px;
     border-top: solid 3px #1E87F0;
     border-bottom: solid 3px #1E87F0;
+    display: inline-block;
+
 }
 
-.uk-tooltip::first-letter{
-    text-transform: uppercase !important;
+.uk-tooltip-inner::first-letter{
+    /*color: #B31F0C;*/
+    text-transform: capitalize;
+
 }
 
-.uk-notification-message::first-letter{
+.uk-notification-message div::first-letter{
     text-transform: uppercase !important;
+    /*display: inline-block;*/
 }
 
 /*satisfactorio*/
@@ -63,4 +68,8 @@ svg .icono {
     border-top: solid 3px rgba(34, 42, 48, 0.8);
     border-bottom: solid 3px rgba(34, 42, 48, 0.8);
     margin-bottom: 5px;
+}
+
+.primer-letra::first-letter{
+    color:blue;
 }
