--- a/tecolotl-web/src/main/webapp/resources/css/administracion/date-picker.css
+++ b/tecolotl-web/src/main/webapp/resources/css/administracion/date-picker.css
@@ -12,8 +12,7 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     /*margin-left: 10px;*/
     margin-top: 10px;
-    position: absolute;
-    z-index: 10000;
+    position: relative;
     padding: 10px;
     box-shadow: 2px 2px 15px rgba(0,0,0,0.2);
     font-size: 13px;
