template profesor js bliblioteca

--- a/tecolotl-web/src/main/webapp/template/profesor/profesor-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/profesor-alumno.xhtml
@@ -9,9 +9,9 @@
 
 <ui:include src="header-profesor-alumno.xhtml"/>
 <h:body pt:data-uk-filter="target: .js-filter">
-   <ui:include src="nav1.xhtml"/>
+   <ui:include src="nav1-profesor.xhtml.xhtml"/>
    <aside id="left-col" class="uk-light uk-visible@m">
-      <ui:include src="nav2.xhtml"/>
+      <ui:include src="nav2-profesor.xhtml.xhtml"/>
       <div class="left-nav-wrap">
          <ui:insert name="menu"/>
          <ui:include src="barras-menu.xhtml"/>
