--- a/tecolotl-web/src/main/webapp/resources/css/profesor/biblioteca-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/biblioteca-profesor.css
@@ -145,3 +145,16 @@
     color:black;
     font-weight: bold;
 }
+
+.modal-contenedor-transcrip{
+    overflow: auto;
+    height: 60vh;
+}
+span.personaje{
+    color: #0e6ecd;
+    font-weight: bold;
+}
+
+#transcripcion strong{
+    color: #E89E0C;
+}
