--- a/tecolotl-web/src/main/webapp/template/profesor/barras-menu.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/barras-menu.xhtml
@@ -9,15 +9,15 @@
         <h5>Daily Reports</h5>
         <div>
             <span class="uk-text-small">Traffic <small>(+50)</small></span>
-            <progress class="uk-progress" value="50" max="100"></progress>
+            <progress class="uk-progress" value="50" max="100"/>
         </div>
         <div>
             <span class="uk-text-small">Income <small>(+78)</small></span>
-            <progress class="uk-progress success" value="78" max="100"></progress>
+            <progress class="uk-progress success" value="78" max="100"/>
         </div>
         <div>
             <span class="uk-text-small">Feedback <small>(-12)</small></span>
-            <progress class="uk-progress warning" value="12" max="100"></progress>
+            <progress class="uk-progress warning" value="12" max="100"/>
         </div>
     </div>
 </html>
