se renombro el archivo el archivo lineas moradas svg por lineas rosas svg

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-arbol.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-arbol.css
@@ -1,5 +1,5 @@
 .fondo-mapa-arbol{
-    background-image: url("#{resource['img/alumno/lineas-moradas.svg']}");
+    background-image: url("#{resource['img/alumno/lineas-rosas.svg']}");
     background-size: cover;
     background-position: center center;
 }
